--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ body::before{
     padding: 60px;
     z-index: 90;
     position: relative;
-    max-width: 450px;
+    min-width: 400px;
     height: 550px;
     margin-left: 50%;
     background-color: rgb(0, 0, 0 ,0.75);
